<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">

    <!-- The project only specified two text view and a button so I wanted
    to spend my time getting the navigation right. LinearLayour was the quickest
    and easiest way to do this -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeTitle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="0"
            android:fontFamily="@font/roboto"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/welcome"
            android:textAlignment="gravity"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/welcomeFloor_text"
            android:layout_width="match_parent"
            android:layout_height="338dp"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="8sp"
            android:layout_marginRight="8sp"
            android:layout_marginBottom="8sp"
            android:layout_weight="1"
            android:text="@string/lorem_ipsum_floor"
            android:textSize="12sp" />

        <Button
            android:id="@+id/welcomeNext_button"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:minHeight="32dp"
            android:text="@string/next" />

    </LinearLayout>

</layout>