<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- A ConstrainLayout was used as I did not want to create a deep hierachy
     between other Views when trying to align the Buttons, Texts and Labels
     on the screen -->

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="shoeVM"
            type="com.udacity.shoestore.ShoeListSharedViewModel" />

        <variable
            name="myHandlers"
            type="com.udacity.shoestore.MyHandlersListener" />

    </data>
    
  


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="@+id/cancel_button"
        app:layout_constraintStart_toEndOf="@+id/cancel_button">


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="391dp"
            android:layout_height="315dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/shoeName_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/shoe_name" />

                <EditText
                    android:id="@+id/shoeName_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/shoe_name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#546E7A"
                    android:text="@={shoe.name}"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/company_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/company" />

                <EditText
                    android:id="@+id/company_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/company"
                    android:inputType="textPersonName"
                    android:textColorHint="#546E7A"
                    android:text="@={shoe.company}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/shoeSize_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/shoe_size" />

                <EditText
                    android:id="@+id/shoeSize_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/shoe_size"
                    android:inputType="number"
                    android:textColorHint="#546E7A"
                    android:text="@={`` + shoe.size}"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:textColorHint="#546E7A"
                    android:text="@={shoe.description}"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:text="@android:string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
            app:layout_constraintEnd_toStartOf="@+id/save_button" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="24dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:layout_constraintVertical_bias="0.127"
            tools:ignore="UsingOnClickInXml"
            android:onClick="@{ (v) -> myHandlers.saveShoe(v, shoe) }"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>